# modern-c-structure

./: Doxyfile  Makefile  README.md  conanfile.py  flake.nix  meson.build
src/: glfw.c  main.c  meson.build
