project('my_project', 'c',
  version : '0.1.0'
  # default_options : ['cpp_std=c++17']
  # default_options : ['c_std=c99']
)

zlib_dep = dependency('zlib')
# zlib_dep = dependency('zlib', version : '<=1.2.13')

opengl_dep = dependency('gl')
glu_dep = dependency('glu')
glfw_dep = dependency('glfw3')

subdir('src')
# subdir('tests')
